# sidecar

./: .gitignore  .vercelignore  LICENSE  README.md  dashboard.html  index.html  landing.html  pyproject.toml
demos/: customer_support.py  run_demo.py  run_loop.py  run_supervised.py
sidecar/: __init__.py  interventions.py  judge.py  lessons.py  logging_setup.py  reflection.py  store.py  supervisor.py  trajectory.py
sidecar/adapters/: __init__.py  anthropic_adapter.py
sidecar/eval/: __init__.py  fixtures.py  harness.py
sidecar/signals/: __init__.py  base.py  goal_drift.py  llm_judges.py  memory_trust.py  persona.py  sycophancy.py
tests/: test_lessons.py  test_reflection.py  test_signals.py  test_store.py  test_supervisor.py
