[project]
name = "sidecar-ai"
version = "0.3.0"
description = "Runtime supervision for long-horizon AI agents."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sidecar*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
