[project]
name = "sidecar-ai"
version = "0.3.0"
description = "A runtime sidecar for AI agents — catches drift, holds the line, and remembers every pressure pattern."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ankit Lakkapragada" }]
keywords = [
    "ai-safety",
    "ai-agents",
    "alignment",
    "guardrails",
    "llm",
    "anthropic",
    "claude",
    "agent-monitoring",
    "prompt-injection",
    "trajectory-supervision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/AnkitLakkapragada/sidecar"
Repository = "https://github.com/AnkitLakkapragada/sidecar"
Issues = "https://github.com/AnkitLakkapragada/sidecar/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sidecar*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
